メッセージ送信機能の実装

--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -98,7 +98,7 @@
   padding: 20px 40px;
   display: flex;
 }
-.form-left{
+.form-input{
   background-color: white;
   margin-right: 15px;
   width: 100%;
