--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -36,13 +36,13 @@
   </div>
 </div>
 
-<div class="form">
-  <div class="form-left">
-    <input type="text" class="form-text" placeholder="type a message">
-     <label class="form-image">
+<%= form_with model: [@room, @message], class: 'form', local: true do |f| %>
+  <div class="form-input">
+    <%= f.text_field :content, class: 'form-text', placeholder: 'type a message' %>
+    <label class="form-image">
       <span class="image-file">画像</span>
-      <input type="file" class="hidden">
+      <%= f.file_field :image, class: 'hidden' %>
     </label>
   </div>
-  <input type="submit" class="form-image-button" value="送信">
-</div>
+  <%= f.submit '送信', class: 'form-submit-button' %>
+<% end %>
