--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -3,7 +3,7 @@
     <%= @room.name%>
   </div>
   <div class="header-button">
-    <a href="#">チャットを終了</a>
+    <%= link_to "チャットを終了", room_path(@room), data: {turbo_method: :delete} %>
   </div>
 </div>
 
